<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 子菜单 -->
    <item
        android:id="@+id/setting1"
        android:orderInCategory="1"
        android:title="@string/zitidaxiao">
        <menu>
            <item
                android:id="@+id/small_size"
                android:orderInCategory="1"
                android:title="@string/xiao"/>
            <item
                android:id="@+id/mid_size"
                android:orderInCategory="2"
                android:title="@string/zhong"/>
            <item
                android:id="@+id/big_size"
                android:orderInCategory="3"
                android:title="@string/da"/>
        </menu>
    </item>

    <item
        android:id="@+id/normal_item"
        android:orderInCategory="2"
        android:title="@string/putongcaidanxiang"/>

    <item
        android:id="@+id/setting3"
        android:orderInCategory="3"
        android:title="@string/zi_ti_yan_se">
        <menu>
            <item
                android:id="@+id/color_red"
                android:orderInCategory="1"
                android:title="@string/hongse"/>
            <item
                android:id="@+id/color_black"
                android:orderInCategory="2"
                android:title="@string/heise"/>
        </menu>
    </item>
</menu>