<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--  Toolbar ActionMode Menu Items  -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/forward"
        android:orderInCategory="100"
        android:title="@string/forward"
        app:showAsAction="ifRoom" />
</menu>