<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <!-- Include other widget or layout tags here. These are considered
            "child views" or "children" of the linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFC107"
            android:gravity="center"
            android:text="@string/android_app"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:fontFamily="@font/alfa_slab_one" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:autofillHints="username"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn43"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="four,three" />

        <Button
            android:id="@+id/btn44"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="four,four" />
    </LinearLayout>

</LinearLayout>